chandeliers-lus/tests/fail/ui/tc/unit-arg.rs
chandeliers_lus::decl! {
    node foo() returns ();
    let
        () = ((()));
        ((),) = (((()),));
        ((())) = ();
    tel;

    node bar() returns ();
    let
        () = foo((()));
    tel
}

fn main() {}
